--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -1,3 +1,17 @@
 <h1>Create Dog</h1>
 
-<%= render "form", dog: @dog %>
+<%= form_with model: @dog do |form| %>
+  <div>
+    <%= form.label :name %><br>
+    <%= form.text_field :name %>
+  </div>
+
+  <div>
+    <%= form.label :motto %><br>
+    <%= form.text_area :motto %>
+  </div>
+
+  <div>
+    <%= form.submit %>
+  </div>
+<% end %>
