--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -1,3 +1,12 @@
 <h1><%= @dog.name %></h1>
 
 <p><%= @dog.motto %></p>
+
+<ul>
+  <li><%= link_to "Edit", edit_dog_path(@dog) %></li>
+
+  <li><%= link_to "Destroy", dog_path(@dog), data: {
+                    turbo_method: :delete,
+                    turbo_confirm: "Are you sure?"
+                  } %></li>
+</ul>
